# strands-metrics

./: .gitattributes  .gitignore  README.md  metrics.db
.github/workflows/: metrics.yaml  metrics.yml
filament-sys/spec/: filament-0.2.0.md
strands-grafana/: docker-compose.yaml  goals.yaml
strands-grafana/provisioning/dashboards/general/: executive.json  health.json
strands-grafana/provisioning/dashboards/operations/: team.json  triage.json
strands-grafana/provisioning/dashboards/sdks/: evals.json  python-sdk.json  typescript-sdk.json
strands-grafana/provisioning/datasources/: automatic.yaml
strands-metrics/: Cargo.toml
strands-metrics/src/: aggregates.rs  client.rs  db.rs  goals.rs  main.rs
